Bug 195355 listBoxObject.getRowCount() returns wrong value r=varga sr=bienvenu